argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioagent/cbioagent-clickhouse-mcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbioagent-clickhouse-mcp
  labels:
    run: cbioagent-clickhouse-mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: cbioagent-clickhouse-mcp
  template:
    metadata:
      labels:
        run: cbioagent-clickhouse-mcp
    spec:
      containers:
        - name: cbioagent-clickhouse-mcp
          image: cbioportal/mcp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      nodeSelector:
        workload: "cbioagent"
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "cbioagent"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: cbioagent-clickhouse-mcp
spec:
  selector:
    run: cbioagent-clickhouse-mcp
  ports:
    - port: 80
      name: http
      targetPort: 8000
  type: ClusterIP
