argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioagent/beta-chat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  labels:
    app.kubernetes.io/instance: cbioagent-beta
  name: cbioagent-beta-ingress
  namespace: default
spec:
  rules:
    - host: beta.chat.cbioportal.org
      http:
        paths:
          - backend:
              service:
                name: cbioagent-librechat-beta
                port:
                  number: 3080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - beta.chat.cbioportal.org
      secretName: beta-chat-cbioportal
